k8s-security-framework/policies/pod-security/KSP-POD-006/tests/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: disallow-host-ipc-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: disallow-host-ipc
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name == 'ksp-pod-006-exception' && object.metadata.namespace
      == 'policy-test'
