k8s-security-framework/policies/pod-security/KSP-POD-006/tests/negative-hostipc-true-with-two-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-006-negative-true-two
  namespace: policy-test
spec:
  hostIPC: true
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
    - name: sidecar
      image: harbor.example.com/demo-api:1.0.0
