k8s-security-framework/policies/pod-security/KSP-POD-006/tests/positive-hostipc-false-with-two-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-006-positive-false-two
  namespace: policy-test
spec:
  hostIPC: false
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
    - name: sidecar
      image: harbor.example.com/demo-api:1.0.0
